  classif.glmnet, regr.glmnet, surv.glmnet, surv.cvglmnet, surv.penalized,
  surv.optimCoxBoostPenalty, surv.glmboost, surv.CoxBoost

- new functions
-- getTaskType, getTaskId, getTaskTargetNames, getTaskSize
-- plotROCRCurves
-- plotViperCharts
-- measureSSE, measureMSE, measureRMSE, measureMEDSE, ...
-- PreprocWrapperCaret
-- setPredictThreshold

- new learners:
-- classif.bdk
-- classif.binomial
-- classif.extraTrees
-- classif.probit
-- classif.xgboost
-- classif.xyf
-- regr.bartMachine
-- regr.bcart
-- regr.bdk
-- regr.bgp
-- regr.bgpllm
-- regr.blm
-- regr.brnn
-- regr.btgp
-- regr.btgpllm
-- regr.btlm
-- regr.cubist
-- regr.elmNN
-- regr.extraTrees
-- regr.laGP
-- regr.xgboost
-- regr.xyf
-- surv.rpart

mlr_2.2:
- The web tutorial was MUCH improved!
- more example tasks and data sets
- Learners and tasks now support ordered factors as features.
  The task description knows whether ordered factors are present and it is checked whether the learner
  supports such a feature. We have set this property 'ordered' very conservatively, so very
  few learners have it, where we are sure ordered inputs are handled correctly during training.
  If you know of more models that support this, please inform us.
- basic R learners now have new slots: name (a descriptive name of the algorithm),
  short.name (abbreviation that can be used in plots and tables) and note
  (notes regarding slight changes for the mlr integration of the learner and such).
- makeLearner now supports some options regarding learner error handling and output which
  could before only be set globally via configureMlr
- Additional arguments for imputation functions to allow a more fine-grain
  control of dummy column creation
- imputeMin and imputeMax now subtract or add a multiple of the range of
  the data from the minimum or to the maximum, respectively.
- cluster methods now have property 'prob' when they support fuzzy cluster membership probabilities,