@@ -504,6 +504,8 @@ export(getHomogeneousEnsembleModels)
 export(getHyperPars)
 export(getLearnerModel)
 export(getMlrOptions)
+export(getNestedTuneResultsOptPathDf)
+export(getNestedTuneResultsX)
 export(getParamSet)
 export(getProbabilities)
 export(getStackedBaseLearnerPredictions)
